fix(style): improve dark mode colors

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -41,13 +41,6 @@ em {
   font-style: italic;
 }
 
-a:hover,
-a:active,
-a:focus,
-a:visited {
-  color: $overlay-color
-}
-
 table {
   border-collapse: collapse;
   border-spacing: 0
